WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57165
ASSERTION FAILED: m_operationInProgress == NoOperation loading nytimes.com
https://bugs.webkit.org/show_bug.cgi?id=57165
Summary
ASSERTION FAILED: m_operationInProgress == NoOperation loading nytimes.com
Anders Carlsson
Reported
2011-03-26 14:00:19 PDT
ASSERTION FAILED: m_operationInProgress == NoOperation loading nytimes.com
Attachments
Patch
(7.37 KB, patch)
2011-03-26 14:09 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-03-26 14:09:22 PDT
Created
attachment 87046
[details]
Patch
Sam Weinig
Comment 2
2011-03-26 14:14:46 PDT
Comment on
attachment 87046
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=87046&action=review
> Source/WebKit2/Platform/CoreIPC/Connection.cpp:214 > +void Connection::setOnlySendMessagesAsDispatchWhenWaitingForSyncReplyWhenProcessingSuchAMessage(bool flag)
Love it.
Anders Carlsson
Comment 3
2011-03-26 14:15:12 PDT
Committed
r82045
: <
http://trac.webkit.org/changeset/82045
>
WebKit Review Bot
Comment 4
2011-03-26 15:09:58 PDT
http://trac.webkit.org/changeset/82045
might have broken Windows XP Debug (Tests) The following tests are not passing: fast/forms/input-appearance-readonly.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug